syntax = scope;

message ConsoleMessage
{
    required uint32 windowID    = 1;
    required uint32 time        = 2;
    required string description = 3;
    optional string uri         = 4;
    optional string context     = 5;
    optional string source      = 6;
    optional string severity    = 7;
}

 
service ConsoleLogger
{
    option (cpp_hfile) = "modules/scope/src/scope_console_logger.h";
    option (core_release) = "2.4";
    option (version) = "2.0";
    option (cpp_class) = OpScopeConsoleLogger;
 
    event OnConsoleMessage returns (ConsoleMessage) = 1;
}

